--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,3 +31,8 @@ jobs:
           DAGSHUB_PJT: ${{ secrets.DAGSHUB_PJT }}
         run: |
           python -m unittest tests/test_model.py
+      - name: Promote model to production
+        if: success()
+        env:
+          DAGSHUB_PJT: ${{ secrets.DAGSHUB_PJT }}
+        run: python scripts/promote_model.py
