--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -36,3 +36,8 @@ jobs:
         env:
           DAGSHUB_PJT: ${{ secrets.DAGSHUB_PJT }}
         run: python scripts/promote_model.py
+      - name: Run Flask app tests
+        if: success()
+        env:
+          DAGSHUB_PJT: ${{ secrets.DAGSHUB_PJT }}
+        run: python -m unittest tests/test_flask_app.py
