--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -41,3 +41,13 @@ jobs:
         env:
           DAGSHUB_PJT: ${{ secrets.DAGSHUB_PJT }}
         run: python -m unittest tests/test_flask_app.py
+      - name: Log in to Docker hub
+        if: success()
+        uses: docker/login-action@v2
+        with:
+          username: $ {{ secrets.DOCKER_HUB_USERNAME }}
+          password: $ {{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+      - name: Build Docker image
+        if: success()
+        run : |
+          docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/emotion-detection1 .
