--- a/flask_app/requirements.txt
+++ b/flask_app/requirements.txt
@@ -1,7 +1,8 @@
 dagshub==0.3.34
 Flask==3.0.3
-mlflow==2.15.1
+mlflow==2.14.3
 mlflow_skinny==2.15.1
-nltk==3.8.2
-numpy==2.1.0
+nltk==3.8.1
+numpy<2
 pandas==2.2.2
+gunicorn
